<resources>
    <string name="app_name">FirebaseDemo</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_phone">Enter Phone number</string>
    <string name="firebase_db">Firebase DB</string>
    <string name="save">Save</string>
    <string name="default_notification_channel_id">Channel ID</string>
    <string name="Show">Show</string>
    <string name="enter_address">Enter Email Address</string>
    <string name="email_authentication">Email Authentication</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_user">New User?</string>
    <string name="age">Age</string>
    <string name="email">Email</string>
    <string name="signup">Sign up</string>
    <string name="logout">Logout</string>
    <string name="gmail_authentication">Gmail Authentication</string>
    <string name="logout_gmail">Logout Gmail</string>
    <string name="firestore">Firestore DB</string>
</resources>